[package]
name = "linebuffer"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
keywords = ["ring", "buffer"]
repository = "https://github.com/0xpr03/LineBuffer"

[dependencies]
arraydeque = {features= ["use_generic_array"], version = "0.4" }
generic-array = "0.12"